<resources>
    <string name="app_name">NSBM TravelMate</string>

    <!--User Registration page-->
    <string name="user_email">e-mail</string>
    <string name="user_password">password</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="title_activity_bus_locations">Map</string>

    <!--Driver Map Page-->
    <string name="start_trip_button">START TRIP</string>
    <string name="stop_trip_button">STOP TRIP</string>


    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--time Table Card-->
    <string name="time_table_title">Bus Time Table</string>
    <string name="driver_name">Driver Name :</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="departure_time">Departure Time :</string>
    <string name="arrival_time">Arrival Time :</string>

    <!--sign in-->
    <string name="login_link_text">Already have an account?</string>
    <!--login-->
    <string name="sign_up_link_text">Don\'t have an account?</string>
</resources>
